--- a/workflows/viirsl1/docker/Dockerfile
+++ b/workflows/viirsl1/docker/Dockerfile
@@ -13,8 +13,17 @@ RUN cd /tmp && \
 
 COPY docker/requirements.txt /tmp/
 RUN $APPDIR/bin/python3 -m pip install -r /tmp/requirements.txt
-COPY scripts/catgen /usr/local/bin/
-COPY workflows/viirsl1/scripts/level1a /usr/local/bin/
-COPY workflows/viirsl1/scripts/level1b /usr/local/bin/
+COPY scripts/*/usr/local/bin/
+COPY workflows/viirsl1/scripts/* /usr/local/bin/
+
+ENV \
+  APPDIR=/opt/mdps-prototype
+RUN python3.12 -m venv $APPDIR
+ENV \
+  VIRTUALENV=$APPDIR \
+  PATH=$APPDIR/bin:$PATH
+COPY docker/requirements.txt /tmp/
+COPY scripts/* /usr/local/bin/
+RUN $APPDIR/bin/python3 -m pip install -r /tmp/requirements.txt
 
 ENTRYPOINT ["tini", "--"]
